--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -91,7 +91,7 @@ bind   = $mod, Q, killactive,                               # close active windo
 bind   = $mod, escape, exec, wlogout --protocol layer-shell # logout menu         (MOD+ESC)
 bind   = $mod SHIFT, escape, exec, swaylock                 # lock screen         (MOD+ESC+SHIFT)
 bind   = $mod, space, exec, rofi -show drun                 # show app menu       (MOD+SPACE)
-bind   = $mod, S, exec, grim -t jpeg -q 10 -g "$slurp" - | swappy -f # screenshot (MOD+S)
+bind   = $mod, S, exec, grim -g "$(slurp)" - | wl-copy      # screenshot (MOD+S)
 
 # selecting window 
 bind   = $mod, left, movefocus, l                           # select left window  (MOD+Left)
