--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,3 +1,4 @@
+# See https://wiki.hyprland.org/Configuring/Monitors/
 
 # Setting monitors
 monitor=DVI-I-1,preferred,auto,1
@@ -7,79 +8,108 @@ monitor=DVI-D-1,highrr,auto,1,transform,3
 exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user inport-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = systemctl --user restart pipewire
+#exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+#exec-once = systemctl --user restart pipewire
 
 # display
 exec-once = swww init
-exec      = waybar
-exec-once = mako
+exec-once = waybar
+exec-once = dunst
 
-env = XCURSOR_SIZE,24
+env = XCURSOR_SIZE,20
 
 input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-    follow_mouse = 1
-    touchpad {
-        natural_scroll = no
-    }
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+  kb_layout = us
+  kb_variant =
+  kb_model =
+  kb_options =
+  kb_rules =
+  follow_mouse = 1
+  repeat_rate=50
+  repeat_delay=240
+  touchpad {
+    disable_while_typing=1
+    natural_scroll=1
+    clickfinger_behavior=1
+    middle_button_emulation=0
+    tap-to-click=1
+  }
+  sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
-    gaps_in = 5
-    gaps_out = 20
-    border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-    layout = dwindle
+  layout=dwindle
+  sensitivity=1.0 # for mouse cursor
+  gaps_in=5
+  gaps_out=20
+  border_size=2
+  col.active_border=0xff5e81ac
+  col.inactive_border=0x66333333
+  apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 }
 
 decoration {
-    rounding = 10
-    blur = yes
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = on
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+  rounding=18
+  blur=1
+  blur_size=6.8 # minimum 1
+  blur_passes=2 # minimum 1, more passes = more resource intensive.
+  blur_new_optimizations = true   
+  # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
+  # if you want heavy blur, you need to up the blur_passes.
+  # the more passes, the more you can up the blur_size without noticing artifacts.
+  drop_shadow=true
+  shadow_range=15
+  col.shadow=0xffa7caff
+  col.shadow_inactive=0x50000000
 }
 
 animations {
-    enabled = yes
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+  enabled=1
+  bezier=overshot,0.13,0.99,0.29,1.1
+  animation=windows,1,4,overshot,popin
+  animation=fade,1,10,default
+  animation=workspaces,1,6,overshot,slide
+  animation=border,1,10,default
 }
 
 dwindle {
-    pseudotile = yes
-    preserve_split = yes
+  pseudotile=1 # enable pseudotiling on dwindle
+  force_split=0
+  no_gaps_when_only = true
 }
 
 master {
-    new_is_master = true
+  new_on_top=true
+  no_gaps_when_only = true
+}
+
+misc {
+  disable_hyprland_logo=true
+  disable_splash_rendering=true
+  mouse_move_enables_dpms=true
+  vfr = false
 }
 
 gestures {
-    workspace_swipe = off
+  workspace_swipe=true 
+  workspace_swipe_min_speed_to_force=5
 }
 
 device:epic-mouse-v1 {
-    sensitivity = -0.5
+  sensitivity = -0.5
 }
 
-windowrule = float,^(pavucontrol)$
+# Blur for waybar 
+blurls=waybar
+blurls=lockscreen
+
+# Float Necessary Windows
+windowrule=float,Rofi
+windowrule=float,pavucontrol
+
+# Increase opacity
+windowrule=tile,spotify
+windowrule=opacity 1,neovim
 
 windowrulev2 = noanim,class:^(wlogout)$
 
@@ -123,11 +153,27 @@ bind   =, escape, submap, reset                             # exit resize mode  
 bind   =, return, submap, reset                             # exit resize mode    (Enter)
 submap = reset
 
-# other window binds
-bind = $mod, Alt_L, togglesplit                             # split window        (MOD+LEFTALT)
-bind = $mod, V, togglefloating                              # toggle floating window (MOD+V)
 
-# switch workspaces with mod + [0-9]
+
+
+
+#bind = $mod CTRL, left, resizewindow, l
+
+# other window binds
+bind = $mod, Alt_L, togglesplit                         # split window        (LEFT ALT)
+
+
+
+bind = $mod, M, exit,       
+bind = $mod, E, exec, dolphin
+bind = $mod, V, togglefloating, 
+bind = $mod, R, exec, rofi -show drun
+bind = $mod, P, pseudo, # dwindle
+bind = $mod, J, togglesplit, # dwindle
+
+
+
+# Switch workspaces with mainMod + [0-9]
 bind = $mod, 1, workspace, 1
 bind = $mod, 2, workspace, 2
 bind = $mod, 3, workspace, 3
@@ -139,8 +185,10 @@ bind = $mod, 8, workspace, 8
 bind = $mod, 9, workspace, 9
 bind = $mod, 0, workspace, 10
 
-# move active window to a workspace with mod + SHIFT + [0-9]
+# Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mod SHIFT, 1, movetoworkspace, 1
+bind = $mod SHIFT, 1, exec, $w1
+
 bind = $mod SHIFT, 2, movetoworkspace, 2
 bind = $mod SHIFT, 3, movetoworkspace, 3
 bind = $mod SHIFT, 4, movetoworkspace, 4
@@ -151,10 +199,13 @@ bind = $mod SHIFT, 8, movetoworkspace, 8
 bind = $mod SHIFT, 9, movetoworkspace, 9
 bind = $mod SHIFT, 0, movetoworkspace, 10
 
-# scroll through existing workspaces with mod + scroll
+# Scroll through existing workspaces with mainMod + scroll
 bind = $mod, mouse_down, workspace, e+1
 bind = $mod, mouse_up, workspace, e-1
 
-# move/resize windows with mod + LMB/RMB and dragging
+# Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
+
+source = ~/.config/hypr/env_var.conf
+source = ~/.config/hypr/env_var_nvidia.conf
