update to .config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -4,6 +4,10 @@
 set -g default-terminal "xterm-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
+# Set status bar background color to blue
+set -g status-style bg=yellow
+set -g status-fg black
+
 # set mouse support 
 set -g mouse on
 
@@ -43,7 +47,6 @@ bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
 # plugins
-set -g @catppuccin_flavour 'mocha'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
