--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -46,7 +46,7 @@
       "1": "󰋜",
       "2": "",
       "3": "",
-      "4": "",
+      "4": "󰙯",
       "5": "󰊢",
       "6": ""
     }
@@ -75,7 +75,7 @@
 
   "memory": {
     "interval": 30,
-    "format": " {}%",
+    "format": " {}%",
     "format-alt":" {used:0.1f}G",
     "max-length": 10,
   },
@@ -86,9 +86,9 @@
 
 
   "network": {
-    "format-wifi": "直 {signalStrength}%",
-    "format-ethernet": " wired",
-    "format-disconnected": "睊",
+    "format-wifi": " {signalStrength}%",
+    "format-ethernet": "󰤨 wired",
+    "format-disconnected": "󱚵",
     "on-click": "bash ~/.config/waybar/scripts/rofi-wifi-menu.sh",
     "format-disconnected": "Disconnected  ",
   },
@@ -96,12 +96,12 @@
   "pulseaudio": {
     "format": "{icon}  {volume}%",
     "format-bluetooth": "  {volume}%",
-    "format-bluetooth-muted": " ",
-    "format-muted": "婢",
+    "format-bluetooth-muted": " ",
+    "format-muted": "",
     "format-icons": {
       "headphone": "",
-      "hands-free": "",
-      "headset": "",
+      "hands-free": "",
+      "headset": "󰋎",
       "phone": "",
       "portable": "",
       "car": "",
@@ -128,7 +128,7 @@
   },
 
   "custom/launcher": {
-    "format": " <span color='#6a92d7'> </span>",
+    "format": " <span color='#6a92d7'>󰣇 </span>",
     "on-click": "rofi -show drun",
   },
 
